--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -5,13 +5,13 @@
                 <div class="card-body">
                     <form action="/links/add" method="post">
                         <div class="form-group">
-                            <input type="text" class="form-control" name="titulo" placeholder="Titulo" autofocus>
+                            <input type="text" class="form-control" name="titulo" placeholder="Vendedor" autofocus>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="text" class="form-control" placeholder="Producto">
+                            <input type="text" name="text" class="form-control" placeholder="Precio">
                         </div>
                         <div class="form-group">
-                            <textarea name="descripcion" rows="2" class="form-control" placeholder="Descripcion"></textarea>
+                            <textarea name="Producto" rows="2" class="form-control" placeholder="Descripcion"></textarea>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-success btn-block">
